--- a/AzureTangyFunc/local.settings.json
+++ b/AzureTangyFunc/local.settings.json
@@ -4,6 +4,7 @@
     "AzureWebJobsStorage": "AzureWebJobsStorageConnectionString",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     //"AzureSqlDatabase": "AzureSqlDatabaseConnectionString",
-    "AzureSqlDatabase": "Server=S-Hesam-S;Database=AzureDotNetMasterySQL;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AzureSqlDatabase": "Server=S-Hesam-S;Database=AzureDotNetMasterySQL;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CustomSendGridKeyAppSettingName": "SendGridKey"
   }
 }
