Section 9 - Add Redis Cache Key to Project

--- a/RedisCache/appsettings.json
+++ b/RedisCache/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=S-HESAM-S;Database=RedisCache;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=S-HESAM-S;Database=RedisCache;Trusted_Connection=True;TrustServerCertificate=True",
+    "AzureRedisConnection": "AzureRedisConnectionString"
   },
   "Logging": {
     "LogLevel": {
